src/css/viz-dashboard.css
  .mainwell {
    padding: 5px 20px;
    border-color: transparent !important;
    background-color: transparent !important;
    background-image: none;
    width: 99%
  }

  .secondwell {
    margin: 5px;
    padding: 10px;
    padding-top: 0px;
    padding-bottom: 0px;
    border-color: transparent !important;
    background-color: transparent !important;
    background-image: none;
  }

  .subcontainer {
    text-align: center !important;
    justify-content: center !important;
    margin-left: 0;
    margin-right: 0 !important;
  }


.glyphicon-app {
    font-size: 1.2em !important;
}

div.dashboardtab > ul > li{
  margin-right: 5px !important;
  margin-left: 0px !important;
  border-left: 1px solid #333333 !important;
  border-right: 1px solid #333333 !important;
  border-top: 1px solid #333333 !important;
}

div.dashboardtab > * > li > a, div.dashboardtab > * > li > * > li> a > span {
  padding-top: 5px !important;
  padding-left: 5px !important;
  padding-bottom: 0px!important;
  padding-right: 5px!important;
  cursor: pointer !important;
  border: none !important;
}

div.btn-container {
  padding-top: 2px !important;
  padding-left: 5px !important;
  padding-bottom: 0px!important;
  padding-right: 0px!important;
  cursor: pointer !important;
  border: none !important;
}

.colmdstyle{
	position: relative !important;
	min-height: 1px !important;
	padding-right: 2px !important;
  padding-left: 2px !important;
}

ul.ul-control {
  list-style-type: none !important;
  margin: 0 !important;
  padding: 0 !important;
  height: 30px !important;
  border: none !important;
}

.ul-control-alt{
  background-color: #333333 !important;
  color: white;
}

.ul-control-main{
  background-color: white !important;
}

.left-block{
  margin: 0;
  padding: 0;
  display: inline !important;
}

.settingsformcontainer {
  margin: 0;
  padding: 0;
  text-align: left;
  justify-content: left;
  width: 100% !important;
}

span.text-g{
  color: black;
}

.li-control-alt{
  background-color: #333333;
  float: right;
}


li.li-control > * > button{
  padding: 0px 5px;
  margin-top: 2px;
  margin-right: 2px;
}

.li-title {
  float: left !important;
  margin: 0px !important;
  padding: 0px !important;
}

.viz-chevron-button {
	height: 16px !important;
	text-align: center;
	vertical-align: middle !important;
	justify-content: center;
	display: ruby-text;
}

.viz-chevron-span {
	text-align: center;
	vertical-align: middle !important;
	justify-content: center;
	display: table-caption;
}
div.dashboardtab > * > li > a:hover, div.dashboardtab > * > li > a:focus,
div.dashboardtab > * > li > * > li> a:hover > span, div.dashboardtab > * > li > * > li> a:focus > span {
  color: #474747;
}
div.dashboardtab > * > li > a, div.dashboardtab > * > li > * > li> a > span {
  color: #929292;
}

